# own-x

./: .gitmodules  README.md
cpp-2d-game-engine/: CMakeLists.txt  README.md
cpp-2d-game-engine/include/glad/: glad.h
cpp-2d-game-engine/src/: CMakeLists.txt  glad.c  main.cpp  main.lua
easy-handwritten-digit-recognition/: README.md  main.py  pyproject.toml
pygit/: .gitignore  README.md  pyproject.toml
pygit/src/: __init__.py  base.py  data.py  diff.py  remote.py  utils.py
